Testing the adaptive tile

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 </head>
 <body>
   <header>
-    <h1>PORTFOLIO</h1>
-    <h2>Hardware Engineer</h2>
+    <h1>VIJAY JAIN</h1>
+    <h2>Hardware Engineer | </h2>
   </header>
 
   <main class="grid">
-    <a class="project" href="single-board-computer.html">
-      <img src="images/single-board-computer.jpg" alt="Single-board computer" />
-      <div class="project-title">SINGLE-BOARD COMPUTER</div>
+    <a class="project" href="/projects/photodetector.html">
+      <img src="images/photodetector.jpg" alt="Photodetector" />
+      <div class="project-title">PHOTODETECTOR</div>
     </a>
 
     <a class="project" href="robotic-arm.html">
