--- a/projects/photodetector.html
+++ b/projects/photodetector.html
@@ -39,18 +39,27 @@
 
     .content {
       padding: 2rem;
-      max-width: 800px;
+      max-width: 1200px;
       margin: auto;
-      line-height: 1.6;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
     }
 
     section {
-      margin-bottom: 3rem;
+      background: #f8f8f8;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
 
     h3 {
       font-size: 1.25rem;
       margin-bottom: 1rem;
+    }
+
+    p {
+      margin-top: 0;
     }
 
     a.article-link {
@@ -60,15 +69,22 @@
       text-decoration: none;
       font-weight: bold;
     }
+
+    @media (max-width: 600px) {
+      .content {
+        grid-template-columns: 1fr;
+        padding: 1rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Single-Board Computer</h1>
-    <h2>Compact control hardware for system-level integration</h2>
+    <h1>Photodetector</h1>
+    <h2>High-power, low-noise measurements at >10 MHz bandwidth</h2>
   </header>
 
-  <img src="images/single-board-computer-hero.jpg" alt="Single-board computer" class="hero" />
+  <img src="images/photodetector.jpg" alt="Photodetector" class="hero" />
 
   <div class="content">
     <section>
