--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
     }
 
     .grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 2rem;
+      column-count: 3;
+      column-gap: 1.5rem;
       padding: 2rem;
     }
 
     .project {
-      text-align: center;
+      display: inline-block;
+      width: 100%;
+      margin-bottom: 1.5rem;
+      break-inside: avoid;
       text-decoration: none;
       color: inherit;
     }
@@ -45,26 +47,40 @@
     .project img {
       width: 100%;
       height: auto;
-      border: 1px solid #ddd;
+      display: block;
       border-radius: 4px;
+      border: 1px solid #ddd;
     }
 
     .project-title {
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       font-weight: bold;
+      text-align: center;
+    }
+
+    @media (max-width: 1000px) {
+      .grid {
+        column-count: 2;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .grid {
+        column-count: 1;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>VIJAY JAIN</h1>
-    <h2>Hardware Engineer | </h2>
+    <h1>PORTFOLIO</h1>
+    <h2>Hardware Engineer</h2>
   </header>
 
   <main class="grid">
-    <a class="project" href="/projects/photodetector.html">
-      <img src="images/photodetector.jpg" alt="Photodetector" />
-      <div class="project-title">PHOTODETECTOR</div>
+    <a class="project" href="single-board-computer.html">
+      <img src="images/single-board-computer.jpg" alt="Single-board computer" />
+      <div class="project-title">SINGLE-BOARD COMPUTER</div>
     </a>
 
     <a class="project" href="robotic-arm.html">
