Main page rendering based on json of projects to separate out the styling.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,33 @@
       color: #000000;
     }
 
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .nav-left {
+      font-size: 1.25rem;
+      font-weight: bold;
+    }
+
+    .nav-right a {
+      margin-left: 1.5rem;
+      text-decoration: none;
+      color: #000;
+      font-size: 0.95rem;
+    }
+
+    .nav-right a:hover {
+      text-decoration: underline;
+    }
+
     header {
       padding: 2rem;
       text-align: left;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
     }
 
     header h2 {
@@ -72,31 +91,43 @@
   </style>
 </head>
 <body>
+  <nav>
+    <div class="nav-left">VIJAY JAIN</div>
+    <div class="nav-right">
+      <a href="#about">About</a>
+    </div>
+  </nav>
+
   <header>
-    <h1>PORTFOLIO</h1>
-    <h2>Hardware Engineer</h2>
+    <h2 id="about">Hardware Engineer working at the intersection of photonics, electronics, and systems design.</h2>
   </header>
 
-  <main class="grid">
-    <a class="project" href="single-board-computer.html">
-      <img src="images/single-board-computer.jpg" alt="Single-board computer" />
-      <div class="project-title">SINGLE-BOARD COMPUTER</div>
-    </a>
+  <main class="grid" id="project-grid"></main>
 
-    <a class="project" href="robotic-arm.html">
-      <img src="images/robotic-arm.jpg" alt="Robotic Arm" />
-      <div class="project-title">ROBOTIC ARM</div>
-    </a>
+  <script>
+    fetch('projects.json')
+      .then(response => response.json())
+      .then(projects => {
+        const container = document.getElementById('project-grid');
+        projects.filter(p => p.visible).forEach(project => {
+          const tile = document.createElement('a');
+          tile.className = 'project';
+          tile.href = project.link;
 
-    <a class="project" href="pcb.html">
-      <img src="images/pcb.jpg" alt="Printed Circuit Board" />
-      <div class="project-title">PRINTED CIRCUIT BOARD</div>
-    </a>
+          const img = document.createElement('img');
+          img.src = project.image;
+          img.alt = project.title;
 
-    <a class="project" href="wearable-device.html">
-      <img src="images/wearable-device.jpg" alt="Wearable Device" />
-      <div class="project-title">WEARABLE DEVICE</div>
-    </a>
-  </main>
+          const title = document.createElement('div');
+          title.className = 'project-title';
+          title.textContent = project.title;
+
+          tile.appendChild(img);
+          tile.appendChild(title);
+          container.appendChild(tile);
+        });
+      })
+      .catch(err => console.error('Error loading projects:', err));
+  </script>
 </body>
 </html>
