--- a/index.html
+++ b/index.html
@@ -5,104 +5,129 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hardware Portfolio</title>
   <style>
+    :root {
+      --sidebar-width: 220px;
+    }
+
     body {
       margin: 0;
       font-family: Helvetica, Arial, sans-serif;
       background-color: #ffffff;
       color: #000000;
-    }
-
-    nav {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      border-bottom: 1px solid #ccc;
+      flex-direction: row;
     }
 
-    .nav-left {
-      font-size: 1.25rem;
+    aside {
+      width: var(--sidebar-width);
+      min-height: 100vh;
+      padding: 2rem 1rem;
+      box-sizing: border-box;
+      border-right: 1px solid #ccc;
+    }
+
+    aside h1 {
+      font-size: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    aside p {
+      margin: 0 0 1rem 0;
+      font-size: 0.9rem;
+    }
+
+    aside nav a {
+      display: block;
+      margin-top: 1.5rem;
+      text-decoration: none;
+      color: #000;
       font-weight: bold;
     }
 
-    .nav-right a {
-      margin-left: 1.5rem;
-      text-decoration: none;
-      color: #000;
-      font-size: 0.95rem;
-    }
-
-    .nav-right a:hover {
-      text-decoration: underline;
-    }
-
-    header {
+    main {
+      flex: 1;
       padding: 2rem;
-      text-align: left;
-    }
-
-    header h2 {
-      margin: 0;
-      font-weight: normal;
-      font-size: 1rem;
-      color: #666;
-    }
-
-    .grid {
-      column-count: 3;
-      column-gap: 1.5rem;
-      padding: 2rem;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      align-items: start;
     }
 
     .project {
-      display: inline-block;
-      width: 100%;
-      margin-bottom: 1.5rem;
-      break-inside: avoid;
+      display: flex;
+      flex-direction: column;
       text-decoration: none;
       color: inherit;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      overflow: hidden;
     }
 
-    .project img {
+    .project img, .placeholder {
       width: 100%;
-      height: auto;
-      display: block;
-      border-radius: 4px;
-      border: 1px solid #ddd;
+      height: 100%;
+      object-fit: cover;
+      flex-grow: 1;
+    }
+
+    .placeholder {
+      background: #eee;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.85rem;
+      color: #666;
+      position: relative;
+    }
+
+    .placeholder::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 0;
+      height: 0;
+      border-left: 25px solid transparent;
+      border-bottom: 25px solid #ccc;
     }
 
     .project-title {
-      margin-top: 0.5rem;
-      font-weight: bold;
       text-align: center;
+      font-weight: bold;
+      font-size: 0.9rem;
+      padding: 0.5rem;
+      background: #f5f5f5;
     }
 
-    @media (max-width: 1000px) {
-      .grid {
-        column-count: 2;
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
       }
-    }
 
-    @media (max-width: 600px) {
-      .grid {
-        column-count: 1;
+      aside {
+        width: 100%;
+        border-right: none;
+        border-bottom: 1px solid #ccc;
+        text-align: center;
+      }
+
+      main {
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       }
     }
   </style>
 </head>
 <body>
-  <nav>
-    <div class="nav-left">VIJAY JAIN</div>
-    <div class="nav-right">
+  <aside>
+    <h1><strong>Vijay Jain</strong></h1>
+    <p>San Francisco, CA</p>
+    <p>vijay.jain@post.harvard.edu</p>
+    <nav>
       <a href="#about">About</a>
-    </div>
-  </nav>
+    </nav>
+  </aside>
 
-  <header>
-    <h2 id="about">Hardware Engineer working at the intersection of photonics, electronics, and systems design.</h2>
-  </header>
-
-  <main class="grid" id="project-grid"></main>
+  <main id="project-grid"></main>
 
   <script>
     fetch('projects.json')
@@ -114,15 +139,27 @@
           tile.className = 'project';
           tile.href = 'projects/' + project.link;
 
-          const img = document.createElement('img');
-          img.src = project.image;
-          img.alt = project.title;
+          if (project.size) {
+            tile.style.gridColumn = `span ${project.size[0]}`;
+            tile.style.gridRow = `span ${project.size[1]}`;
+          }
+
+          let content;
+          if (project.image) {
+            content = document.createElement('img');
+            content.src = project.image;
+            content.alt = project.title;
+          } else {
+            content = document.createElement('div');
+            content.className = 'placeholder';
+            content.textContent = project.title.toLowerCase().replace(/ /g, '-') + ".jpg";
+          }
 
           const title = document.createElement('div');
           title.className = 'project-title';
           title.textContent = project.title;
 
-          tile.appendChild(img);
+          tile.appendChild(content);
           tile.appendChild(title);
           container.appendChild(tile);
         });
