--- a/projects/index.html
+++ b/projects/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hardware Portfolio — HBAR</title>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project Page</title>
   <style>
+    :root {
+      --sidebar-width: 220px;
+    }
+
     body {
       margin: 0;
       font-family: Helvetica, Arial, sans-serif;
-      background-color: #ffffff;
-      color: #000000;
       display: flex;
+      flex-direction: row;
     }
 
     aside {
-      width: 220px;
+      width: var(--sidebar-width);
+      min-height: 100vh;
       padding: 2rem 1rem;
-      border-right: 1px solid #ccc;
       box-sizing: border-box;
     }
 
     aside h1 {
       font-size: 1rem;
-      margin: 0 0 0.5rem 0;
+      margin-bottom: 0.5rem;
     }
 
     aside p {
@@ -31,15 +33,15 @@
       font-size: 0.9rem;
     }
 
-    nav a {
+    aside nav a {
       display: block;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       text-decoration: none;
       color: #000;
-      font-weight: normal;
+      font-weight: bold;
     }
 
-    nav a.active {
+    aside nav .active {
       text-decoration: underline;
     }
 
@@ -47,29 +49,22 @@
       flex: 1;
       padding: 2rem;
       display: flex;
-      flex-direction: row;
       gap: 2rem;
-      flex-wrap: wrap;
     }
 
-    .project-image {
+    .tile {
       flex: 0 0 auto;
       width: 300px;
-      height: auto;
-      position: relative;
-      border: 1px solid #ccc;
       background: #eee;
+      border: 1px solid #aaa;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      position: relative;
     }
 
-    .project-image img {
-      width: 100%;
-      height: auto;
-    }
-
-    .project-image.placeholder::after {
+    .tile::after {
       content: "";
       position: absolute;
       top: 0;
@@ -77,11 +72,26 @@
       width: 0;
       height: 0;
       border-left: 25px solid transparent;
-      border-bottom: 25px solid #ccc;
+      border-bottom: 25px solid #bbb;
     }
 
-    .markdown {
+    .tile span {
+      font-size: 0.9rem;
+      color: #000;
+    }
+
+    .details {
+      flex: 1;
       max-width: 600px;
+    }
+
+    .details h2 {
+      margin-top: 0;
+      font-size: 1.2rem;
+    }
+
+    .details p {
+      margin: 0.5rem 0;
     }
 
     @media (max-width: 768px) {
@@ -91,7 +101,6 @@
 
       aside {
         width: 100%;
-        border-right: none;
         border-bottom: 1px solid #ccc;
         text-align: center;
       }
@@ -100,63 +109,43 @@
         flex-direction: column;
         align-items: center;
       }
-
-      .markdown {
-        max-width: 90%;
-      }
     }
   </style>
 </head>
 <body>
   <aside>
-    <a href="/" style="text-decoration: none; color: black;">
-      <h1><strong>Vijay Jain</strong></h1>
-    </a>
+    <h1><a href="../index.html"><strong>Vijay Jain</strong></a></h1>
     <p>San Francisco, CA</p>
     <p>vijay.jain@post.harvard.edu</p>
-    <nav id="project-links"></nav>
+    <nav>
+      <a href="../about.html">About</a>
+      <div id="project-links"></div>
+    </nav>
   </aside>
 
   <main>
-    <div class="project-image" id="project-image"></div>
-    <div class="markdown" id="markdown-content"></div>
+    <div class="tile">
+      <span>hbar.jpg</span>
+    </div>
+    <div class="details">
+      <p><strong>Project:</strong> hbar</p>
+      <p><strong>Description:</strong> High-overtone bulk acoustic wave resonator</p>
+      <p><strong>Location:</strong> Yale Quantum Institute | New Haven, CT</p>
+    </div>
   </main>
 
   <script>
-    const thisPage = location.pathname.split("/").pop().replace('.html', '');
-
     fetch('../projects.json')
-      .then(response => response.json())
+      .then(res => res.json())
       .then(projects => {
-        const nav = document.getElementById('project-links');
-        const imageContainer = document.getElementById('project-image');
-
-        projects.filter(p => p.visible).forEach(p => {
-          const slug = p.link.replace('.html', '');
-          const a = document.createElement('a');
-          a.href = slug + '.html';
-          a.textContent = p.title.toLowerCase();
-          if (slug === thisPage) a.classList.add('active');
-          nav.appendChild(a);
-
-          if (slug === thisPage) {
-            if (p.image) {
-              const img = document.createElement('img');
-              img.src = '../' + p.image;
-              img.alt = p.title;
-              imageContainer.appendChild(img);
-            } else {
-              imageContainer.classList.add('placeholder');
-              imageContainer.textContent = p.title.toLowerCase().replace(/ /g, '-') + '.jpg';
-            }
-          }
+        const container = document.getElementById('project-links');
+        projects.filter(p => p.visible).forEach(project => {
+          const link = document.createElement('a');
+          link.href = '../projects/' + project.link;
+          link.textContent = project.title;
+          if (project.link.includes('hbar')) link.classList.add('active');
+          container.appendChild(link);
         });
-      });
-
-    fetch('content.md')
-      .then(res => res.text())
-      .then(md => {
-        document.getElementById('markdown-content').innerHTML = marked.parse(md);
       });
   </script>
 </body>
